# metacli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TASK_REVERSAL_WAVE_GPU_PIPELINE.txt  agentctl  listener.ini  mt_boot.ini  mtcli-local  mtcli.py  mtcli_projects.json  package-lock.json  package.json  pyproject.toml  script_run.ini  troubleshooting.hub-wavephasesd.md  tsconfig.json  verify_datapath.ini
GPU-dll_projects/EngineDLL-GPU-sources/: README.txt
GPU-dll_projects/Hub_WavePhaseSD/: GPU_PhaseViz.ex5  GPU_WaveViz.ex5  GPU_WaveViz_Solo.ex5  GPU_WaveViz_Solo_Cycles.ex5  GPU_WaveViz_Solo_Cycles.mq5  (+4 more)
agent/: agent_config.yaml  knowledge_index.yaml  tools_index.yaml
codex_logs/: reversal_wave_gpu_last.txt
docs/: COMMAND_LISTENER_PROTOCOL.md  Platform Start - For Advanced Users - Getting Started - MetaTrader 5 Help(1).html  reversal_wave_pipeline_overview.md
legacy_docs/: CHANGELOG_legacy.md  README_mtcli_legacy.md
mt_agent_pack/: README.md  bootstrap_mt_agent.sh
mt_agent_recipes/: expert_full.sh  indicator_full.sh  tester_smoke.sh
native-fft/: BUILD.md  CMakeLists.txt  build_fasttransforms.bat  build_win_once.bat
native-fft/include/: fasttransforms.h
native-fft/src/: fasttransforms.cpp  rw_fasttransforms.cu
old/: AGENTS-3.md  AGENTS-4.md  AGENTS-dll.md  AGENTS.md  TASK_REVERSAL_WAVE_GPU_PIPELINE-3.txt  TASK_REVERSAL_WAVE_GPU_PIPELINE.txt
prompts/: behavior_contract.yaml  system.yaml
scripts/: AutoTemplateBuilder.mq5  Bridge-Only.ps1  apply_default_template.ps1  e2e-local.sh  smoke.sh
src/: cli.ts
tools/: mtcli_config.json  mtcli_projects.json
(+101 files in other folders)
